--- a/Responsive_web/Responsive_Web_Design_Projects/Build_a_Tribute_Page/Build_a_Tribute_Page.html
+++ b/Responsive_web/Responsive_Web_Design_Projects/Build_a_Tribute_Page/Build_a_Tribute_Page.html
@@ -3,7 +3,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="./CSS/Build_a_Tribute_Page.css">
-        <title>Document</title>
+        <title>Build a Tribute Page</title>
     </head>
     <body>
         <div id="main">
