vinhkha commit 29/06/2021 Update course responsive web design

--- a/Front_End_Development_Libraries/Bootstrap/Create_a_Bootstrap_Headline.html
+++ b/Front_End_Development_Libraries/Bootstrap/Create_a_Bootstrap_Headline.html
@@ -6,7 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello World</h1>
-    <h2>CatPhotoApp</h2>
+    <h3 class="text-center text-primary">
+        jQuery Playground
+    </h3>
 </body>
 </html>
