--- a/Front_End_Development_Libraries/Bootstrap/Make_Images_Mobile_Responsive.html
+++ b/Front_End_Development_Libraries/Bootstrap/Make_Images_Mobile_Responsive.html
@@ -25,13 +25,15 @@
   }
 </style>
 
-<!-- them the div va lop container-fluid -->
 <div class="container-fluid">
   <h2 class="red-text">CatPhotoApp</h2>
 
   <p>Click here for <a href="#">cat photos</a>.</p>
 
   <a href="#"><img class="smaller-image thick-green-border" src="https://bit.ly/fcc-relaxing-cat" alt="A cute orange cat lying on its back."></a>
+
+<!-- tao img moi -->
+  <img class="img-responsive" src="https://bit.ly/fcc-running-cats" alt=""> 
 
   <p>Things cats love:</p>
   <ul>
