--- a/Front_End_Development_Libraries/Bootstrap/Create_a_Bootstrap_Row.html
+++ b/Front_End_Development_Libraries/Bootstrap/Create_a_Bootstrap_Row.html
@@ -6,7 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello World</h1>
-    <h2>CatPhotoApp</h2>
+    <div class="container-fluid">
+        <h3 class="text-primary text-center">jQuery Playground</h3>
+        <div class="row"></div>
+    </div>
 </body>
 </html>
