--- a/Front_End_Development_Libraries/Bootstrap/Ditch_Custom_CSS_for_Bootstrap.html
+++ b/Front_End_Development_Libraries/Bootstrap/Ditch_Custom_CSS_for_Bootstrap.html
@@ -1,16 +1,7 @@
 <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css">
 <style>
-  .red-text {
-    color: red;
-  }
-
   h2 {
-    font-family: Lobster, Monospace;
-  }
-
-  p {
-    font-size: 16px;
-    font-family: Monospace;
+    font-family: Lobster;
   }
 
   .thick-green-border {
@@ -19,20 +10,27 @@
     border-style: solid;
     border-radius: 50%;
   }
-
-  .smaller-image {
-    width: 100px;
-  }
 </style>
 
-<!-- them the div va lop container-fluid -->
 <div class="container-fluid">
-  <h2 class="red-text">CatPhotoApp</h2>
+  <h2 class="text-center text-primary">CatPhotoApp</h2>
 
-  <p>Click here for <a href="#">cat photos</a>.</p>
+  <p class="text-primary">Click here for <a href="#">cat photos</a>.</p>
 
-  <a href="#"><img class="smaller-image thick-green-border" src="https://bit.ly/fcc-relaxing-cat" alt="A cute orange cat lying on its back."></a>
+  <a href="#"><img class="img-responsive thick-green-border" src="https://bit.ly/fcc-relaxing-cat" alt="A cute orange cat lying on its back."></a>
 
+  <img src="https://bit.ly/fcc-running-cats" class="img-responsive" alt="Three kittens running towards the camera.">
+  <div class="row">
+    <div class="col-xs-4">
+      <button class="btn btn-block btn-primary">Like</button>
+    </div>
+    <div class="col-xs-4">
+      <button class="btn btn-block btn-info">Info</button>
+    </div>
+    <div class="col-xs-4">
+      <button class="btn btn-block btn-danger">Delete</button>
+    </div>
+  </div>
   <p>Things cats love:</p>
   <ul>
     <li>cat nip</li>
