--- a/Front_End_Development_Libraries/Bootstrap/Taste_the_Bootstrap_Button_Color_Rainbow.html
+++ b/Front_End_Development_Libraries/Bootstrap/Taste_the_Bootstrap_Button_Color_Rainbow.html
@@ -25,14 +25,17 @@
   }
 </style>
 
-<!-- them the div va lop container-fluid -->
 <div class="container-fluid">
-  <h2 class="red-text">CatPhotoApp</h2>
+  <h2 class="red-text text-center">CatPhotoApp</h2>
 
   <p>Click here for <a href="#">cat photos</a>.</p>
 
   <a href="#"><img class="smaller-image thick-green-border" src="https://bit.ly/fcc-relaxing-cat" alt="A cute orange cat lying on its back."></a>
 
+  <img src="https://bit.ly/fcc-running-cats" class="img-responsive" alt="Three kittens running towards the camera.">
+
+  <!-- tao mau cho button like-->
+  <button class="btn btn-primary btn-block">Like</button>
   <p>Things cats love:</p>
   <ul>
     <li>cat nip</li>
