--- a/Front_End_Development_Libraries/Bootstrap/Use_the_Bootstrap_Grid_to_Put_Elements_Side_By_Side.html
+++ b/Front_End_Development_Libraries/Bootstrap/Use_the_Bootstrap_Grid_to_Put_Elements_Side_By_Side.html
@@ -25,14 +25,28 @@
   }
 </style>
 
-<!-- them the div va lop container-fluid -->
 <div class="container-fluid">
-  <h2 class="red-text">CatPhotoApp</h2>
+  <h2 class="red-text text-center">CatPhotoApp</h2>
 
   <p>Click here for <a href="#">cat photos</a>.</p>
 
   <a href="#"><img class="smaller-image thick-green-border" src="https://bit.ly/fcc-relaxing-cat" alt="A cute orange cat lying on its back."></a>
 
+  <img src="https://bit.ly/fcc-running-cats" class="img-responsive" alt="Three kittens running towards the camera.">
+
+  <!-- su dung luoi bootstrap -->
+  <div class="row">
+    <div class="col-xs-4">
+      <button class="btn btn-block btn-primary">Like</button>
+    </div>
+    <div class="col-xs-4">
+      <button class="btn btn-block btn-info">Info</button>
+    </div>
+    <div class="col-xs-4">
+      <button class="btn btn-block btn-danger">Delete</button>
+    </div>
+  </div>
+  
   <p>Things cats love:</p>
   <ul>
     <li>cat nip</li>
