--- a/Responsive_web/Basic_html5/Fill_in_the_Blank_with_Placeholder_Text.html
+++ b/Responsive_web/Basic_html5/Fill_in_the_Blank_with_Placeholder_Text.html
@@ -6,6 +6,9 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>Hello World</h1>
+    <h2>CatPhotoApp</h2>
+    <p>Hello Paragraph</p>
     <p>kitty ipsum</p>
 </body>
 </html>
