--- a/Responsive_web/Basic_html5/Inform_with_the_Paragraph_Element.html
+++ b/Responsive_web/Basic_html5/Inform_with_the_Paragraph_Element.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>Hello World</h1>
+    <h2>CatPhotoApp</h2>
     <p>Hello Paragraph</p>
 </body>
 </html>
