--- a/Responsive_web/Basic_html5/Introduction_to_HTML5_Elements.html
+++ b/Responsive_web/Basic_html5/Introduction_to_HTML5_Elements.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
+    <h2>CatPhotoApp</h2>
     <main> 
         <p>Kitty ipsum dolor sit amet, shed everywhere shed    everywhere stretching attack your ankles chase the red dot, hairball run catnip eat the grass sniff.</p>
     
