vinhkha commit 16/07/2021 update index, css Done product

--- a/project_market/pages/index.html
+++ b/project_market/pages/index.html
@@ -296,10 +296,10 @@
                     </div>
                 </div>
                 <div class="arrow">
-                    <button type="button" class="btn btn_1 btn-outline-primary">
+                    <button type="button" class="btn btn-1 btn-outline-primary">
                         <img src="../images/icon/arrow_left.png" alt="">
                     </button>
-                    <button type="button" class="btn btn_2 btn-outline-primary">
+                    <button type="button" class="btn btn-2 btn-outline-primary">
                         <img src="../images/icon/arrow_right.png" alt="">
                     </button>
                 </div>
@@ -406,31 +406,112 @@
                     <img src="../images/panner_4.png" alt="">
                 </div>
             </div>
-            <div class="product-menu_2">
+            <div class="product-menu-2">
                 <div class="product-menu-left">
-                    <div class="new-arrivals">
+                    <div class="featured">
                         <h5>FEATURED</h5>
                     </div>
-                    <div></div>
+                    <div class="line"></div>
                     <div class="new-arrivals">
                         <h5>NEW ARRIVALS</h5>
                     </div>
-                    <div></div>
-                    <div class="new-arrivals">
+                    <div class="line"></div>
+                    <div class="best-sellers">
                         <h5>BEST SELLERS</h5>
                     </div>
                 </div>
                 <div class="arrow">
-                    <button type="button" class="btn btn_1 btn-outline-primary">
+                    <button type="button" class="btn btn-1 btn-outline-primary">
                         <img src="../images/icon/arrow_left.png" alt="">
                     </button>
-                    <button type="button" class="btn btn_2 btn-outline-primary">
+                    <button type="button" class="btn btn-2 btn-outline-primary">
                         <img src="../images/icon/arrow_right.png" alt="">
                     </button>
                 </div>
             </div>
             <div class="">
-                 
+                <div class="product">
+                    <div class="product-left">
+                        <img src="../images/product_1.png" alt="">
+                        <p class="product-name">Duis autem veleum </p>
+                        <div class="star-rating"></div>
+                        <div class="price-text">
+                            <p class="product-price-1">$116.00</p>
+                            <p class="product-price-2">$127.00</p>
+                        </div>
+                        <div class="icon">
+                            <div class="icon-1">
+                                <img src="../images/icon/cart_2.png" alt="">
+                            </div>
+                            <div class="icon-2">
+                                <img src="../images/icon/heart.png" alt="">
+                            </div>
+                            <div class="icon-3">
+                                <img src="../images/icon/chart.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="product-center-1">
+                        <img src="../images/product_1.png" alt="">
+                        <p class="product-name">Duis autem veleum </p>
+                        <div class="star-rating"></div>
+                        <div class="price-text">
+                            <p class="product-price-1">$116.00</p>
+                            <p class="product-price-2">$127.00</p>
+                        </div>
+                        <div class="icon">
+                            <div class="icon-1">
+                                <img src="../images/icon/cart_2.png" alt="">
+                            </div>
+                            <div class="icon-2">
+                                <img src="../images/icon/heart.png" alt="">
+                            </div>
+                            <div class="icon-3">
+                                <img src="../images/icon/chart.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="product-center-2">
+                        <img src="../images/product_1.png" alt="">
+                        <p class="product-name">Duis autem veleum </p>
+                        <div class="star-rating"></div>
+                        <div class="price-text">
+                            <p class="product-price-1">$116.00</p>
+                            <p class="product-price-2">$127.00</p>
+                        </div>
+                        <div class="icon">
+                            <div class="icon-1">
+                                <img src="../images/icon/cart_2.png" alt="">
+                            </div>
+                            <div class="icon-2">
+                                <img src="../images/icon/heart.png" alt="">
+                            </div>
+                            <div class="icon-3">
+                                <img src="../images/icon/chart.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="product-right">
+                        <img src="../images/product_1.png" alt="">
+                        <p class="product-name">Duis autem veleum </p>
+                        <div class="star-rating"></div>
+                        <div class="price-text">
+                            <p class="product-price-1">$116.00</p>
+                            <p class="product-price-2">$127.00</p>
+                        </div>
+                        <div class="icon">
+                            <div class="icon-1">
+                                <img src="../images/icon/cart_2.png" alt="">
+                            </div>
+                            <div class="icon-2">
+                                <img src="../images/icon/heart.png" alt="">
+                            </div>
+                            <div class="icon-3">
+                                <img src="../images/icon/chart.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
 
         </div>
