vinhkha commit 20/07/2021 Update icon image, index, css

--- a/project_market/pages/index.html
+++ b/project_market/pages/index.html
@@ -20,9 +20,9 @@
 
 <body>
     <div class="top-bar">
-        <div class="top-container">
+        <div class="top-container container">
             <div class="top">
-                <img src="../images/icon/clock.png" alt="" class="clock">
+                <img src="../images/icon/clock.png" alt="">
                 <div class="text">
                     <h4>30 DAY RETURN</h4>
                     <p>moneyback guarantee</p>
@@ -30,7 +30,7 @@
             </div>
             <div class="line"></div>
             <div class="top">
-                <img src="../images/icon/car.png" alt="" class="car">
+                <img src="../images/icon/car.png" alt="">
                 <div class="text">
                     <h4>FREE SHIPPING ON $30</h4>
                     <p>On all order over $99</p>
@@ -38,7 +38,7 @@
             </div>
             <div class="line"></div>
             <div class="top">
-                <img src="../images/icon/discount.png" alt="" class="discount">
+                <img src="../images/icon/discount.png" alt="">
                 <div class="text">
                     <h4>SAFE SHOPPING</h4>
                     <p>Save up to 50% now</p>
@@ -87,9 +87,9 @@
                         <div class="cart">
                             <button class="btn-cart">
                                 <img src="../images/icon/cart_1.png" alt="">
-                            <div>
-                                <span>0</span>
-                            </div>
+                                <div>
+                                    <span>0</span>
+                                </div>
                             </button>
                         </div>
                     </li>
@@ -115,7 +115,7 @@
             <div class="menu">
                 <!-- menu -->
                 <div class="menu-left col-sm-9">
-                    <ul class="nav-menu-left">
+                    <ul class="nav-menu-left col-sm-9">
                         <li>
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
                                 aria-haspopup="true" aria-expanded="false">
