--- a/project_market/pages/index.html
+++ b/project_market/pages/index.html
@@ -9,35 +9,45 @@
     <!-- css -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="../css/star-rating-svg.css">
+        <link
+        rel="stylesheet"
+        href="https://unpkg.com/swiper/swiper-bundle.min.css"
+      />
+        <link rel="stylesheet" type="text/css" href="../css/star-rating-svg.css">
     <link rel="stylesheet" type="text/css" href="../css/style.css">
 
 </head>
 
 <body>
     <div class="top-bar">
-        <div class="top-container container">
-            <div class="top">
-                <img src="../images/icon/clock.png" alt="">
-                <div class="text">
-                    <h4>30 DAY RETURN</h4>
-                    <p>moneyback guarantee</p>
+        <div class="container">
+            <div class="row">
+                <div class="col-sm">
+                    <div class="top-clock">
+                        <img src="../images/icon/clock.png" alt="">
+                        <div class="text">
+                            <h4>30 DAY RETURN</h4>
+                            <p>moneyback guarantee</p>
+                        </div>
+                    </div>
                 </div>
-            </div>
-            <div class="line"></div>
-            <div class="top">
-                <img src="../images/icon/car.png" alt="">
-                <div class="text">
-                    <h4>FREE SHIPPING ON $30</h4>
-                    <p>On all order over $99</p>
+                <div class="col-sm">
+                    <div class="top-car">
+                        <img src="../images/icon/car.png" alt="">
+                        <div class="text">
+                            <h4>FREE SHIPPING ON $30</h4>
+                            <p>On all order over $99</p>
+                        </div>
+                    </div>
                 </div>
-            </div>
-            <div class="line"></div>
-            <div class="top">
-                <img src="../images/icon/discount.png" alt="">
-                <div class="text">
-                    <h4>SAFE SHOPPING</h4>
-                    <p>Save up to 50% now</p>
+                <div class="col-sm">
+                    <div class="top-discount">
+                        <img src="../images/icon/discount.png" alt="">
+                        <div class="text">
+                            <h4>SAFE SHOPPING</h4>
+                            <p>Save up to 50% now</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -89,7 +99,7 @@
                 <p>My Account</p>
             </div>
             <div class="check">
-                <img src="../images/icon/check.png" alt="">
+                <input type="checkbox" checked>
                 <p>Checkout</p>
             </div>
             <div class="login">
@@ -173,7 +183,7 @@
         <!-- HEADER -->
         <nav class="navbar navbar-default navbar-fixed-top">
             <!-- top -->
-            <div class="top-left col-sm-7">
+            <div class="top-left col-sm-6 col-md-6 col-lg-7">
                 <div class="england">
                     <img src="../images/icon/england.png" alt="">
                     <select name="dropdown-language" id="dropdown-language" required="">
@@ -186,25 +196,33 @@
                     </select>
                 </div>
             </div>
-            <div class="top-right col-sm-5">
-                <ul class="nav top-right">
-                    <li class="heart">
-                        <img src="../images/icon/heart.png" alt="">
-                        <p>Wishlist</p>
-                    </li>
-                    <li class="user">
-                        <img src="../images/icon/user.png" alt="">
-                        <p>My Account</p>
-                    </li>
-                    <li class="check">
-                        <img src="../images/icon/check.png" alt="">
-                        <p>Checkout</p>
-                    </li>
-                    <li class="login">
-                        <img src="../images/icon/lock.png" alt="">
-                        <p>Login</p>
-                    </li>
-                    <li>
+            <div class="top-right col-sm-6 col-md-6 col-lg-5">
+                <div class="row">
+                    <div class="col">
+                        <li class="heart">
+                            <img src="../images/icon/heart.png" alt="">
+                            <p>Wishlist</p>
+                        </li>
+                    </div>
+                    <div class="col">
+                        <li class="user">
+                            <img src="../images/icon/user.png" alt="">
+                            <p>My Account</p>
+                        </li>    
+                    </div>
+                    <div class="col">
+                        <li class="check">
+                            <input type="checkbox" checked>
+                            <p>Checkout</p>
+                        </li>
+                    </div>
+                    <div class="col">
+                        <li class="login">
+                            <img src="../images/icon/lock.png" alt="">
+                            <p>Login</p>
+                        </li>
+                    </div>
+                    <div class="col">
                         <div class="cart">
                             <button class="btn-cart">
                                 <img src="../images/icon/cart_1.png" alt="">
@@ -213,8 +231,8 @@
                                 </div>
                             </button>
                         </div>
-                    </li>
-                </ul>
+                    </div>
+                  </div>
             </div>
 
             <!-- center -->
@@ -235,8 +253,8 @@
 
             <div class="menu">
                 <!-- menu -->
-                <div class="menu-left col-sm-9">
-                    <ul class="nav-menu-left col-sm-9">
+                <div class="menu-left col-sm-9 col-md-9 col-lg-8">
+                    <ul class="nav-menu-left">
                         <li>
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
                                 aria-haspopup="true" aria-expanded="false">
@@ -290,7 +308,7 @@
                         <li><a href="#"><span class="caret">ABOUT US</span></a></li>
                     </ul>
                 </div>
-                <div class="menu-right col-sm-3">
+                <div class="menu-right col-sm-3 col-md-3 col-lg-3">
                     <ul class="nav-menu-right">
                         <li>
                             <a href="#">
@@ -311,82 +329,174 @@
             <div class="menu-line"></div>
         </nav>
 
-        <!-- HEADER -->
-
         <!-- carousel -->
         <div class="wrapper">
-            <div class="side-left col-sm-9">
-                <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+            <div class="side-left col-md-9">
+                <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner custom-item">
                         <div class="carousel-item active">
                             <img src="../images/slide_1.png" class="" alt="...">
+                            <div class="text-slide-1">
+                                <div class="text-1">
+                                    <p class="sale"><i>Sale</i></p>
+                                    <p class="up-to"><i>- UP TO -</i></p>
+                                </div>
+                                <div class="text-2">
+                                    <p class="number">70</p>
+                                    <div class="text-top">
+                                        <p class="percent">&#37;</p>
+                                        <p class="off">OFF SELECTED STYLE</p>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                         <div class="carousel-item">
                             <img src="../images/slide_2.png" class="" alt="...">
+                            <div class="text-slide-2">
+                                <div class="text-1">
+                                    <p class="sale"><i>Sale</i></p>
+                                    <p class="up-to"><i>- UP TO -</i></p>
+                                </div>
+                                <div class="text-2">
+                                    <p class="back">BACK TO SCHOOL COOL</p>
+                                    <p class="shop-now">SHOP NOW >></p>
+                                </div>
+                            </div>
                         </div>
                         <div class="carousel-item">
                             <img src="../images/slide_3.png" class="" alt="...">
+                            <div class="text-slide-2">
+                                <div class="text-1">
+                                    <p class="sale"><i>Sale</i></p>
+                                    <p class="up-to"><i>- UP TO -</i></p>
+                                </div>
+                                <div class="text-2">
+                                    <p class="back">BACK TO SCHOOL COOL</p>
+                                    <p class="shop-now">SHOP NOW >></p>
+                                </div>
+                            </div>
                         </div>
                         <div class="carousel-item">
                             <img src="../images/slide_4.png" class="" alt="...">
+                            <div class="text-slide-2">
+                                <div class="text-1">
+                                    <p class="sale"><i>Sale</i></p>
+                                    <p class="up-to"><i>- UP TO -</i></p>
+                                </div>
+                                <div class="text-2">
+                                    <p class="back">BACK TO SCHOOL COOL</p>
+                                    <p class="shop-now">SHOP NOW >></p>
+                                </div>
+                            </div>
                         </div>
                         <div class="carousel-item">
                             <img src="../images/slide_5.png" class="" alt="...">
+                            <div class="text-slide-2">
+                                <div class="text-1">
+                                    <p class="sale"><i>Sale</i></p>
+                                    <p class="up-to"><i>- UP TO -</i></p>
+                                </div>
+                                <div class="text-2">
+                                    <p class="back">BACK TO SCHOOL COOL</p>
+                                    <p class="shop-now">SHOP NOW >></p>
+                                </div>
+                            </div>
                         </div>
                         <div class="carousel-item">
                             <img src="../images/slide_6.png" class="" alt="...">
+                            <div class="text-slide-2">
+                                <div class="text-1">
+                                    <p class="sale"><i>Sale</i></p>
+                                    <p class="up-to"><i>- UP TO -</i></p>
+                                </div>
+                                <div class="text-2">
+                                    <p class="back">BACK TO SCHOOL COOL</p>
+                                    <p class="shop-now">SHOP NOW >></p>
+                                </div>
+                            </div>
                         </div>
                         <div class="carousel-item">
                             <img src="../images/slide_7.png" class="" alt="...">
+                            <div class="text-slide-3">
+                                <div class="text-1">
+                                    <p class="sale"><i>Sale</i></p>
+                                    <p class="up-to"><i>- UP TO -</i></p>
+                                </div>
+                                <div class="text-2">
+                                    <p class="going">GOINGSOMEWHERE?</p>
+                                    <p class="shop-now">SHOP NOW >></p>
+                                </div>
+                            </div>
                         </div>
                     </div>
-                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                    <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel"
                         data-bs-slide="prev">
                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                         <span class="visually-hidden">Previous</span>
                     </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                    <button class="carousel-control-next" type="button" data-bs-target="#myCarousel"
                         data-bs-slide="next">
                         <span class="carousel-control-next-icon" aria-hidden="true"></span>
                         <span class="visually-hidden">Next</span>
                     </button>
                 </div>
             </div>
-            <div class="side-right col-sm-3">
+            <div class="side-right col-md-3">
                 <div class="top">
-                    <div id="carouselExampleControls" class="carousel slide-top" data-bs-ride="carousel">
-                        <div class="custom-item" >
-                            <img src="../images/left_slide_top.png" class="" alt="...">
-                        </div>
+                    <img src="../images/left_slide_top.png" class="" alt="...">
+                    <div class="text-image-1">
+                        <p class="sale">Sale</p>
+                        <p class="summer"><i>Summer</i></p>
+                    </div>
+                    <div class="text-image-2">
+                        <p class="holiday">HOLIDAY HITS</p>
+                        <p class="shop-now">Shop now >></p>
                     </div>
                 </div>
                 <div class="bottom">
-                    <div id="carouselExampleControls" class="carousel slide-bottom" data-bs-ride="carousel">
-                        <div class="custom-item">
+                    <div id="myCarousel2" class="carousel slide-bottom" data-bs-ride="carousel">
+                        <div class="carousel-inner custom-item">
                             <div class="carousel-item active">
                                 <img src="../images/left_slide_bottom_1.png" class="" alt="...">
+                                <div class="text-image-1">
+                                    <p class="spring"><i>Spring</i></p>
+                                </div>
+                                <div class="text-image-2">
+                                    <p class="holiday">HOLIDAY HITS</p>
+                                    <p class="shop-now">Shop now >></p>
+                                </div>
                             </div>
-                            <div class="carousel-item">
+                            <div class="carousel-inner carousel-item">
                                 <img src="../images/left_slide_bottom_2.png" class="" alt="...">
+                                <div class="text-image-1">
+                                    <p class="spring"><i>Spring</i></p>
+                                </div>
+                                <div class="text-image-2">
+                                    <p class="holiday">HOLIDAY HITS</p>
+                                    <p class="shop-now">Shop now >></p>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-
         <!-- main -->
         <div class="main">
             <div class="main-logo">
-                <button type="button" class="btn btn-outline-primary">
+                <button type="button" class="btn btn-prev btn-outline-primary">
                     <img src="../images/icon/arrow_left.png" alt="">
                 </button>
-                <img src="../images/logo_1.png" alt="">
-                <img src="../images/logo_2.png" alt="">
-                <img src="../images/logo_3.png" alt="">
-                <img src="../images/logo_2.png" alt="">
-                <img src="../images/logo_1.png" alt="">
-                <button type="button" class="btn btn-outline-primary">
+                <div class="swiper-container mySwiper">
+                    <div class="swiper-wrapper">
+                      <div class="swiper-slide"><img src="../images/logo_1.png" alt=""></div>
+                      <div class="swiper-slide"><img src="../images/logo_2.png" alt=""></div>
+                      <div class="swiper-slide"><img src="../images/logo_3.png" alt=""></div>
+                      <div class="swiper-slide"><img src="../images/logo_2.png" alt=""></div>
+                      <div class="swiper-slide"><img src="../images/logo_1.png" alt=""></div>
+                    </div>
+                  </div>
+                <button type="button" class="btn btn-next btn-outline-primary">
                     <img src="../images/icon/arrow_right.png" alt="">
                 </button>
             </div>
@@ -686,6 +796,7 @@
     </script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>\
     <script src="../js/star_rating.min.js"></script>
     <script src="../js/main.js"></script>
     
@@ -697,15 +808,15 @@
               <div class="col-sm">
                 <div class="footer-left">
                     <h5>THIS WEEK</h5>
-                    <div class="text-1">
+                    <div class="text">
                         <p>Introducing James Jagger for AW16 Men’s </p>
                         <p class="view-more">View More</p>
                     </div>
-                    <div class="text-1">
+                    <div class="text">
                         <p>Autumn Winter 2016 </p>
                         <p class="view-more">View More</p>
                     </div>
-                    <div class="text-1">
+                    <div class="text">
                         <p>Introducing James Jagger for AW16 Men’s </p>
                         <p class="view-more">View More</p>
                     </div>
@@ -807,7 +918,6 @@
             </div>
         </div>
     </footer>
-    <!-- Footer -->
 </body>
 
 </html>
